@@ -1,6 +1,6 @@
-// id3parser.h
+// id3tag.h
 //
-// Extract ID3 tags from an MPEG/AAC Bitstream
+// ID3 tag container class.
 //
 //   (C) Copyright 2019 Fred Gleason <fredg@paravelsystems.com>
 //
@@ -18,30 +18,18 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
-#ifndef ID3PARSER_H
-#define ID3PARSER_H
-
-#include <stdint.h>
+#ifndef ID3TAG_H
+#define ID3TAG_H
 
 #include <QByteArray>
-#include <QObject>
 
-#include "id3tag.h"
+#include <id3v2tag.h>
 
-class Id3Parser : public QObject
+class Id3Tag : public TagLib::ID3v2::Tag
 {
-  Q_OBJECT;
  public:
-  Id3Parser(QObject *parent=0);
-  void parse(QByteArray &data);
-  void reset();
-
- signals:
-  void tagReceived(uint64_t offset,Id3Tag *tag);
-
- private:
-  int parser_bytes_processed;
+  Id3Tag(const QByteArray &data);
 };
 
 
-#endif  // ID3PARSER_H
+#endif  // ID3TAG_H
