@@ -386,3 +386,5 @@
 	master HLS playlists.
 2019-04-04 Fred Gleason <fredg@paravelsystems.com>
 	* Stubbed out support for HLS timed metadata.
+2019-08-09 Fred Gleason <fredg@paravelsystems.com>
+	* Added a TagLib dependency.
